# SchoolManagementSystem

./: .gitignore  README.md  db.sqlite3  main.py  manage.py  pyproject.toml
OAuthImplementation/: README.md  manage.py  requirements.txt
OAuthImplementation/OAuthImplementation/: asgi.py  settings.py  urls.py  wsgi.py
OAuthImplementation/OAuthImplementation/accounts/: admin.py  apps.py  models.py  signals.py
OAuthImplementation/OAuthImplementation/accounts/migrations/: 0001_initial.py
OAuthImplementation/OAuthImplementation/oauth/: __init__.py  urls.py  views.py
OAuthImplementation/OAuthImplementation/oauth/static/oauth/: script.js  style.css
OAuthImplementation/OAuthImplementation/oauth/templates/oauth/: home.html  login.html  profile.html
SchoolManagementSystem/: __init__.py  asgi.py  services.py  settings.py  urls.py  wsgi.py
accounts/: __init__.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
frontend/: app.js  index.html  server.py  styles.css
frontend/auth/google/: callback
