[project]
name = "sms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=48.0.0",
    "dj-rest-auth>=7.2.0",
    "django>=6.0.5",
    "django-allauth>=65.18.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "mimetype>=0.1.5",
    "pillow>=12.2.0",
    "requests>=2.34.2",
]
